--- a/content/payments/upi-deeplinks/sdks.mdx
+++ b/content/payments/upi-deeplinks/sdks.mdx
@@ -12,6 +12,7 @@ visible_in_sidebar: true
 <Row>
     <Portion>
         <h3>Sample apps built using SDKs</h3>
+        <hr class="primary margin-bottom-none" />
     </Portion>
     <Portion desktopSpan="8">
         <h4>Javascript</h4>
@@ -29,6 +30,14 @@ visible_in_sidebar: true
             rel="noopener noreferrer"
         >
             Vue.js + Node &nbsp;&#8599;
+        </a>
+        <br />
+        <a
+            href="https://github.com/SetuHQ/upi-deeplinks-sample-apps/tree/main/node-svelte-app"
+            target="_blank"
+            rel="noopener noreferrer"
+        >
+            Svelte + Node &nbsp;&#8599;
         </a>
     </Portion>
     <Portion desktopSpan="8">
