Add sample app links

--- a/content/payments/upi-deeplinks/sdks.mdx
+++ b/content/payments/upi-deeplinks/sdks.mdx
@@ -9,4 +9,46 @@ visible_in_sidebar: true
 
 <SDKs />
 
+<Row>
+    <Portion>
+        <h3>Sample apps built using SDKs</h3>
+    </Portion>
+    <Portion desktopSpan="8">
+        <h4>Javascript</h4>
+        <a
+            href="https://github.com/SetuHQ/upi-deeplinks-sample-apps/tree/main/node-next-app"
+            target="_blank"
+            rel="noopener noreferrer"
+        >
+            Next.js + Node &nbsp;&#8599;
+        </a>
+        <br />
+        <a
+            href="https://github.com/SetuHQ/upi-deeplinks-sample-apps/tree/main/node-vue-app"
+            target="_blank"
+            rel="noopener noreferrer"
+        >
+            Vue.js + Node &nbsp;&#8599;
+        </a>
+        <br />
+        <a
+            href="https://github.com/SetuHQ/upi-deeplinks-sample-apps/tree/main/node-svelte-app"
+            target="_blank"
+            rel="noopener noreferrer"
+        >
+            Svelte + Node &nbsp;&#8599;
+        </a>
+    </Portion>
+    <Portion desktopSpan="8">
+        <h4>Python</h4>
+        <a
+            href="https://github.com/SetuHQ/upi-deeplinks-sample-apps/tree/main/flask-react-app"
+            target="_blank"
+            rel="noopener noreferrer"
+        >
+            React + Flask &nbsp;&#8599;
+        </a>
+    </Portion>
+</Row>
+
 <WasPageHelpful />
