add information on using platformBillId in Add Credit API

--- a/content/payments/upi-deeplinks/quickstart.mdx
+++ b/content/payments/upi-deeplinks/quickstart.mdx
@@ -494,7 +494,8 @@ A mock payment against a link can be triggered to recreate a successful payment 
   },
   "sourceAccount": {
     "accountID": "dummy_customer@vpa"
-  }
+  },
+  "transactionReference": "464618891939677612"
 }`}
 </CodeBlockWithCopy>
 
@@ -503,6 +504,7 @@ A mock payment against a link can be triggered to recreate a successful payment 
 -   `amount` is the value in **rupees** of the amount the link was generated for, expressed as data type `float` or `double`
 -   `destinationAccount.accountID` is the `upiID` generated above.
 -   `sourceAccount.accountID` is the VPA from which the payment is made - any dummy value can be used here, which is in a valid VPA format.
+-   `transactionReference` is the `platformBillID` from the Create Link response. 
 
 The response would simply be `200 OK` without any body.
 
