Add order and update menu items

--- a/content/data/esign/flexi-esign.mdx
+++ b/content/data/esign/flexi-esign.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_title: Flexible Esign guide
+sidebar_title: Flexible eSign guide
 page_title: Integration guide with flexible signature coordinates
 order: 3
 visible_in_sidebar: true
@@ -9,15 +9,14 @@ visible_in_sidebar: true
 
 The signing config is a JSON that specifies on which pages and at what coordinates the specific user has to sign. The size of the signer's rectangle.
 
-- Signing config allows you to sing at multiple places on same page.
-- Sign at multiple places on different pages.
-- Sign at any coordinate on a page.
+-   Signing config allows you to sing at multiple places on same page.
+-   Sign at multiple places on different pages.
+-   Sign at any coordinate on a page.
 
 ### Understanding the config schema
 
-
 <CodeBlockWithCopy language="json">
-                {`{
+    {`{
   "signers": [
     {
       "optional": false,
@@ -45,13 +44,12 @@ The signing config is a JSON that specifies on which pages and at what coordinat
   ]
 }`}
 </CodeBlockWithCopy>
-            
 
-- The signers array specifies the config for each signer. Each signer config has information about what pages and coordinates the specific signer has to sign.
-- The above example indicates there is one signer. Who should sign at `(x1:402, y1:53, x2:542, y2:93)` on pages 0 and 1. Assuming starting index as 0. On coordinate `(x1:358, y1:232, x2:498.53, y2:272)` on page 2.
-- The coordinates are the lower left and upper right of the diagonal of the sign rectangle.
-- The config can be used to get flexible configurations like one signer signs on multiple places on the same page with multiple signers in the overall configuration.
-- The `optional` field indicates whether the sign by that signer is required for completion of document.
+-   The signers array specifies the config for each signer. Each signer config has information about what pages and coordinates the specific signer has to sign.
+-   The above example indicates there is one signer. Who should sign at `(x1:402, y1:53, x2:542, y2:93)` on pages 0 and 1. Assuming starting index as 0. On coordinate `(x1:358, y1:232, x2:498.53, y2:272)` on page 2.
+-   The coordinates are the lower left and upper right of the diagonal of the sign rectangle.
+-   The config can be used to get flexible configurations like one signer signs on multiple places on the same page with multiple signers in the overall configuration.
+-   The `optional` field indicates whether the sign by that signer is required for completion of document.
 
 <hr class="tertiary" />
 
@@ -60,18 +58,18 @@ The signing config is a JSON that specifies on which pages and at what coordinat
 #### Multiple signers, different pages and same coordinates
 
 <Callout type="tip">
-  Signer 1 signs at <code>(x1:402, y1:53, x2:542, y2:93)</code> on pages 0 and
-  1.
-  <br />
-  <br />
-  Signers 2 signs at <code>(x1:402, y1:53, x2:542, y2: 93)</code> on pages 2 and
-  3.
+    Signer 1 signs at <code>(x1:402, y1:53, x2:542, y2:93)</code> on pages 0 and
+    1.
+    <br />
+    <br />
+    Signers 2 signs at <code>(x1:402, y1:53, x2:542, y2: 93)</code> on pages 2 and
+    3.
 </Callout>
 
 <br />
 
 <CodeBlockWithCopy language="json">
-                {`{
+    {`{
   "signers": [
     {
       "optional": false,
@@ -105,7 +103,6 @@ The signing config is a JSON that specifies on which pages and at what coordinat
 }`}
 </CodeBlockWithCopy>
 
-
 <br />
 
 <hr class="tertiary" />
@@ -113,20 +110,20 @@ The signing config is a JSON that specifies on which pages and at what coordinat
 #### Multiple signers and one signer signs in multiple places on the same page
 
 <Callout type="tip">
-  Signer 1 signs at <code>(x1:402, y1:53, x2:542, y2:93)</code> on pages 0 and
-  1.
-  <br />
-  <br />
-  Signer 1 signs at <code>(x1:358, y1:232, x2:498, y2:272)</code> on pages 0 and
-  1.
-  <br />
-  <br />
-  Signer 2 signs at <code>(x1:402, y1: 53, x2: 542, y2:93)</code> on pages 2 and
-  3.
+    Signer 1 signs at <code>(x1:402, y1:53, x2:542, y2:93)</code> on pages 0 and
+    1.
+    <br />
+    <br />
+    Signer 1 signs at <code>(x1:358, y1:232, x2:498, y2:272)</code> on pages 0 and
+    1.
+    <br />
+    <br />
+    Signer 2 signs at <code>(x1:402, y1: 53, x2: 542, y2:93)</code> on pages 2
+    and 3.
 </Callout>
 
 <CodeBlockWithCopy language="json">
-                {`{
+    {`{
   "signers": [
     {
       "optional": false,
@@ -172,59 +169,65 @@ The signing config is a JSON that specifies on which pages and at what coordinat
 ## Upload signing config
 
 <Row>
-  <Portion desktopSpan="whole">
-    <Tabs
-      tabs={[
-        {
-          key: "1",
-          label: "200",
-          content: (
-            <>
-              <p>
-                <Badge type="success">SUCCESS</Badge> Setu has processed your
-                request successfully.
-              </p>
-              <hr className="tertiary" />
-              <p>
-                Upload the signing config to get the config id in response.{" "}
-                <br />
-                The request body should be a continuos string. To achieve that, remove line breaks from the JSON before uploading. <a href="https://www.textfixer.com/tools/remove-line-breaks.php" target="_blank">
-                  (remove line break)
-                </a>
-                <br />
-              </p>
-              <h5>Request</h5>
-              <CodeBlockWithCopy language="json">
-                {`POST /api/signature/config
+    <Portion desktopSpan="whole">
+        <Tabs
+            tabs={[
+                {
+                    key: "1",
+                    label: "200",
+                    content: (
+                        <>
+                            <p>
+                                <Badge type="success">SUCCESS</Badge> Setu has
+                                processed your request successfully.
+                            </p>
+                            <hr className="tertiary" />
+                            <p>
+                                Upload the signing config to get the config id
+                                in response. <br />
+                                The request body should be a continuos string. To
+                                achieve that, remove line breaks from the JSON before
+                                uploading. <a
+                                    href="https://www.textfixer.com/tools/remove-line-breaks.php"
+                                    target="_blank"
+                                >
+                                    (remove line break)
+                                </a>
+                                <br />
+                            </p>
+                            <h5>Request</h5>
+                            <CodeBlockWithCopy language="json">
+                                {`POST /api/signature/config
 { "signers": [ { "optional": false, "signRectangles": [ { "coordinate": { "lowerLeftX": 402, "lowerLeftY": 53, "upperRightX": 542, "upperRightY": 93 }, "pages": [ 0, 1 ] },
 { "coordinate": { "lowerLeftX": 358, "lowerLeftY": 232, "upperRightX": 498.53009106595096, "upperRightY": 272.52901734104046 }, "pages": [ 2 ] } ] }, 
 { "optional": false, "signRectangles": [ { "coordinate": { "lowerLeftX": 358, "lowerLeftY": 232, "upperRightX": 498.53009106595096, "upperRightY": 272.52901734104046 }, "pages": [ 0, 1 ] } ] } ] }`}
-              </CodeBlockWithCopy>
-              <hr className="tertiary" />
-              <h5>Response</h5>
-              <p>You will get the following details—</p>
-              <ul>
-                <li>
-                  Unique configId <code>id</code> which can be used to create
-                  signature request.
-                </li>
-                <li>
-                  The same comfigId can be used across multiple signature
-                  request using doc of one type.
-                </li>
-              </ul>
-              <CodeBlockWithCopy language="json">
-                {`{
+                            </CodeBlockWithCopy>
+                            <hr className="tertiary" />
+                            <h5>Response</h5>
+                            <p>You will get the following details—</p>
+                            <ul>
+                                <li>
+                                    Unique configId <code>id</code> which can be
+                                    used to create signature request.
+                                </li>
+                                <li>
+                                    The same comfigId can be used across
+                                    multiple signature request using doc of one
+                                    type.
+                                </li>
+                            </ul>
+                            <CodeBlockWithCopy language="json">
+                                {`{
 "configId": "825169c7-08a4-4739-94d5-0d8c4ef5e4f1",
 "traceId": "5de9b52d-1252-409b-9bc5-063fa67f8191"
 }`}
-              </CodeBlockWithCopy>
-            </>
-          ),
-        },
-      ]}
-    ></Tabs>
-  </Portion>
+                            </CodeBlockWithCopy>
+                        </>
+                    ),
+                },
+            ]}
+        ></Tabs>
+    </Portion>
 </Row>
 
 ### Flow of API calls
