Context filter addition to Consent object table

--- a/content/data/account-aggregator/consent-object.mdx
+++ b/content/data/account-aggregator/consent-object.mdx
@@ -28,6 +28,7 @@ This consent object carries information about all the different types of data th
 | `Frequency` has 2 components—`unit` and `value` | `unit` can be `HOURLY`, `DAILY`, `MONTHLY`, `YEARLY`. `value` has to be greater than 0.<br/>Additionally the maximum frequency value is defined is `1` request per HOUR. So, no more than `24` requests are allowed per DAY                                                                                                                                                                                  |
 | `DataFilter`                                    | Allows you to specify conditions for filtering the data being fetched. For example, fetch transactions where the `TRANSACTIONAMOUNT` is greater than or equal to INR 20,000. You can use the `type`, `operator` and `value` keys to set the filters.                                                                                                                                                         |
 | `redirectUrl`                                   | Redirect your users back to your application once the consent is reviewed. By default, the redirectURL is https://setu.co/                                                                                                                                                                                                                                                                                   |
+| `context`                                   | Allows you to specify an FIP OR Account type (Current, Savings, Insurance, etc) as a key value pair for you to be able to customise the accounts fetched on the consent flow. We support the context filters `accounttype` which takes the Key as `accounttype`  where values can be `CURRENT` or `SAVINGS` and  `fipid` with the `FIP ID` as the value(s).                                                                                                                                                                                                                                                                                    |
 
 ### Consent Response object
 
