--- a/content/data/account-aggregator/api-integration/consent-flow.mdx
+++ b/content/data/account-aggregator/api-integration/consent-flow.mdx
@@ -78,6 +78,10 @@ Read up more about the the `Detail` object <a href="/data/account-aggregator/con
             "DEPOSIT"
         ]
     },
+    "context": {
+            "key": "accounttype",
+            "value": "CURRENT"
+        },
     "redirectUrl": "https://setu.co"
 }`}
 </CodeBlockWithCopy>
