APPENDING Context request to Consent object (#18)
* APPENDING Context request to Consent object

3.c of Jira ticket AG-218

* Make it an array

Co-authored-by: Aditya Gannavarapu <adityagannavarapu.67@gmail.com>

--- a/content/data/account-aggregator/api-integration/consent-flow.mdx
+++ b/content/data/account-aggregator/api-integration/consent-flow.mdx
@@ -78,6 +78,13 @@ Read up more about the the `Detail` object <a href="/data/account-aggregator/con
             "DEPOSIT"
         ]
     },
+    "context": 
+    [
+      {
+        "key": "accounttype",
+        "value": "CURRENT"
+      },
+    ],
     "redirectUrl": "https://setu.co"
 }`}
 </CodeBlockWithCopy>
