Update Postman collection

--- a/content/data/bav/reverse-penny-drop/quickstart.mdx
+++ b/content/data/bav/reverse-penny-drop/quickstart.mdx
@@ -27,7 +27,7 @@ Contact Setu on <a href="">onboarding@setu.co</a> to get `x-client-id` and `x-cl
 
 ### Step 3 — Test on sandbox
 
-Please use this <a href="https://documenter.getpostman.com/view/8675983/TzefBjTM#4f6b41e5-57d6-4981-8672-588424827bb3" target="_blank">postman collection</a> to test <strong>Reverse Penny Drop</strong>.
+Please use this <a href="https://www.postman.com/setu-devs/workspace/data-gateway-public/folder/16116908-3c3a4e40-06ad-4c56-bdf4-be2f8e74296a" target="_blank">postman collection</a> to test <strong>Reverse Penny Drop</strong>.
 
 #### List of APIs
 
