Add BSA to docs

--- a/content/data/account-aggregator/overview.mdx
+++ b/content/data/account-aggregator/overview.mdx
@@ -58,6 +58,8 @@ Setu currently provides building blocks for FIU applications in conjunction with
   - Carefully built screens that your users can use to approve or reject incoming consent requests
   - This UI is built to be embeddable inside web and native mobile apps
 
+Please check <a href="/data/account-aggregator/bank-statment-analyser" target="_blank">Setu's Bank statement analyser</a> to get actionable insights from a customer's bank statement.
+
 <NextPage
   info={{
     description: "Get started with Setu AA integration with Quickstart Guide",
