--- a/content/data/esign/flexi-esign.mdx
+++ b/content/data/esign/flexi-esign.mdx
@@ -211,7 +211,7 @@ The signing config is a JSON that specifies on which pages and at what coordinat
                                     used to create signature request.
                                 </li>
                                 <li>
-                                    The same comfigId can be used across
+                                    The same configId can be used across
                                     multiple signature request using doc of one
                                     type.
                                 </li>
