--- a/content/data/digilocker/quickstart.mdx
+++ b/content/data/digilocker/quickstart.mdx
@@ -5,7 +5,7 @@ order: 1
 visible_in_sidebar: true
 ---
 
-## DigiLocker integration
+## DigiLocker integration 2.0
 
 Setu DigiLocker APIs can be used to fetch documents of your users instantly—with their consent.
 
