--- a/content/payments/bbps/resources/oauth.mdx
+++ b/content/payments/bbps/resources/oauth.mdx
@@ -20,14 +20,14 @@ Read more about OAuth 2.0 <a href="https://tools.ietf.org/html/rfc6749" target="
 Setu will make a request to the OAuth Token URL using the credentials configured on Bridge to get the `access_token`. 
 This token would then be used to make `/fetch` and `/fetchReceipt` requests to the `BASE URL` configured on Bridge as follows.
 
+Assume `BASE URL` to be `https://base-url.com`
+
 <CodeBlockWithCopy language="shell">
-  {
-    `curl --location --request POST 'https://<Base URL>/bills/<fetch/fetchReceipt>' \\
+  {`curl --location --request POST 'https://base-url.com/bills/<fetch/fetchReceipt>' \\
     --header 'Content-Type: application/json' \\
     --header 'Authorization: Bearer <access_token>' \\
     --data '{......}'
-    `
-  }
+    `}
 </CodeBlockWithCopy>
 
 Refer to the below curl requests and responses based on the chosen `OAuth2.0 scheme` on Bridge
@@ -47,14 +47,10 @@ Refer to the below curl requests and responses based on the chosen `OAuth2.0 sch
 </CodeBlockWithCopy>
 
 <CodeBlockWithCopy language="json">
-  {
-    `
-    {
+  {`{
       "access_token": "actual_token", 
       "refresh_token": "token_used_to_refresh_access_token"
-    }
-    `
-  }
+}`}
 </CodeBlockWithCopy>
 
 - For `Password`
@@ -75,13 +71,10 @@ Refer to the below curl requests and responses based on the chosen `OAuth2.0 sch
 
 <CodeBlockWithCopy language="json">
   {
-    `
-    {
+    `{
       "access_token": "actual_token", 
       "refresh_token": "token_used_to_refresh_access_token"
-    }
-    `
-  }
+}`}
 </CodeBlockWithCopy>
 
 
