--- a/content/payments/bbps/resources/oauth.mdx
+++ b/content/payments/bbps/resources/oauth.mdx
@@ -17,27 +17,20 @@ Read more about OAuth 2.0 <a href="https://tools.ietf.org/html/rfc6749" target="
 
 ### Setu consuming Merchant OAuth Token API
 
-Setu will make a request to the OAuth Token URL using the credentials configured on Bridge to get the `access_token`. 
-This token would then be used to make `/fetch` and `/fetchReceipt` requests to the `BASE URL` configured on Bridge as follows.
+Setu will make a request to the `Token URL` with the credentials configured on Bridge under the `OAuth2.0` Auth scheme.
 
-Assume `BASE URL` to be `https://base-url.com`
+Assume the URLs to be
+ - `Base URL`: `https://api.my-company.com/v1/bbps`
+ - `Token URL`: `https://api.my-company.com/v1/bbps/auth/oauth`
 
-<CodeBlockWithCopy language="shell">
-  {`curl --location --request POST 'https://base-url.com/bills/<fetch/fetchReceipt>' \\
-    --header 'Content-Type: application/json' \\
-    --header 'Authorization: Bearer <access_token>' \\
-    --data '{......}'
-    `}
-</CodeBlockWithCopy>
-
-Refer to the below curl requests and responses based on the chosen `OAuth2.0 scheme` on Bridge
+Based on the chosen `OAuth2.0 scheme` on Bridge, Setu will make either one of the following requests
 
 - For `Client credentials`
 
 <CodeBlockWithCopy language="shell">
   {
     `
-    curl --location --request POST 'https://<Token URL>' \\
+    curl --location --request POST 'https://api.my-company.com/v1/bbps/auth/oauth' \\
     --header 'Content-Type: application/x-www-form-urlencoded' \\
     --data-urlencode 'grant_type=client_credentials' \\
     --data-urlencode 'client_secret=myOAuthSecret' \\
@@ -58,7 +51,7 @@ Refer to the below curl requests and responses based on the chosen `OAuth2.0 sch
 <CodeBlockWithCopy language="shell">
   {
     `
-    curl --location --request POST 'https://<Token URL>' \\
+    curl --location --request POST 'https://api.my-company.com/v1/bbps/auth/oauth' \\
     --header 'Content-Type: application/x-www-form-urlencoded' \\
     --data-urlencode 'username=myUsername' \\
     --data-urlencode 'password=myPassword' \\
@@ -75,6 +68,16 @@ Refer to the below curl requests and responses based on the chosen `OAuth2.0 sch
       "access_token": "actual_token", 
       "refresh_token": "token_used_to_refresh_access_token"
 }`}
+</CodeBlockWithCopy>
+
+This `access_token` would then be used to make `/bills/fetch` and `/bills/fetchReceipt` requests to the `Base URL` configured on Bridge as follows.
+
+<CodeBlockWithCopy language="shell">
+  {`curl --location --request POST 'https://api.my-company.com/v1/bbps/bills/<fetch||fetchReceipt>' \\
+    --header 'Content-Type: application/json' \\
+    --header 'Authorization: Bearer <access_token>' \\
+    --data '{......}'
+    `}
 </CodeBlockWithCopy>
 
 
