Format markdown tables properly

--- a/content/payments/billpay/api-integration/objects.mdx
+++ b/content/payments/billpay/api-integration/objects.mdx
@@ -10,7 +10,7 @@ visible_in_sidebar: true
 This is the initiating payment channel. ****more description ????****
 
 | type       | description            | who should use ??? |
-|------------+------------------------+--------------------|
+|------------|------------------------|--------------------|
 | `INT`      | Internet Portal        |                    |
 | `INTB`     | Internet Banking       |                    |
 | `MOB`      | Mobile Application     |                    |
@@ -29,6 +29,7 @@ This is the initiating payment channel. ****more description ????****
 Payment modes supported by a biller.
 
 | type             | Who shuld use ??? |
+|------------------|-------------------|
 | Cash             |                   |
 | Internet Banking |                   |
 | Credit Card      |                   |
@@ -51,7 +52,7 @@ Payment modes supported by a biller.
 Customer object holds the customer mobile number and the customer bill parameters.
 
 | parameter                | type                               | description                                                                                        | example                                       |
-|--------------------------+------------------------------------+----------------------------------------------------------------------------------------------------+-----------------------------------------------|
+|--------------------------|------------------------------------|----------------------------------------------------------------------------------------------------|-----------------------------------------------|
 | `mobile`                 | `string` (6, 10 and 20 digits)     | Customer Mobile Number                                                                             | 9876543210, 357220                            |
 | `billParameters`         | `{ name: string, value: string}[]` | Bill Parameters. The parameters to send is found in the biller details API.                        | [{"name": "Loan Number", "value": "1895159"}] |
 | `billParameters[].name`  | `string`                           | Name of the bill parameter. name should match the parameter in biller details API.                 | "Loan Number"                                 |
@@ -63,7 +64,7 @@ Customer object holds the customer mobile number and the customer bill parameter
 Biller object holds the biller ID.
 
 | parameter | type     | description           | example          |
-|-----------+----------+-----------------------+------------------|
+|-----------|----------|-----------------------|------------------|
 | `id`      | `string` | The Biller ID on BBPS | "MAHI00000NATIC" |
 
 
@@ -75,7 +76,7 @@ against it. ????
 
 
 | parameter    | type                | description                    | example                |
-|--------------+---------------------+--------------------------------+------------------------|
+|--------------|---------------------|--------------------------------|------------------------|
 | `id`         | `string`            | The Agent ID on BBPS           | "AS01AI06512391457204" |
 | `channel`    | `PaymentChannel`    | Payment Channel used by Agent. | "INT"                  |
 | `ip`         | `string,ipv4`       | Agent server IP address        | "124.170.23.24"        |
@@ -86,14 +87,14 @@ against it. ????
 | `terminalId` | `string`            | Agent terminal ID              | "6000011234"           |
 | `imei`       | `string`            | Agent IMEI                     | "123456789012345"      |
 | `ifsc`       | `string`            | Agent IFSC                     | "ICIC0000152"          |
-| `os`         | `iOS \vert Android` | Initiating device OS           | "Android"              |
+| `os`         | `iOS / Android`     | Initiating device OS           | "Android"              |
 | `app`        | `string`            | Initiating app name            | "SmartPay"             |
 
 
 ## Initiating Channel & Required Agent parameters
 
 | Channel    | Agent parameters                             |
-|------------+----------------------------------------------|
+|------------|----------------------------------------------|
 | `BNKBRNCH` | `ifsc`,`mobile`,`geocode`,`postalCode`       |
 | `MOB`      | `ip`,`imei`,`os`,`app`                       |
 | `MOBB`     | `ip`,`imei`,`os`,`app`                       |
@@ -107,7 +108,7 @@ against it. ????
 ## Initiating Channel & Eligible Payment modes
 
 | Payment Mode     | INT | INTB | MOB | MOBB | ATM | BNKBRNCH | KIOSK | AGT | BSC |
-|------------------+-----+------+-----+------+-----+----------+-------+-----+-----|
+|------------------|-----|------|-----|------|-----|----------|-------|-----|-----|
 | Cash             | N   | N    | N   | N    | N   | Y        | Y     | Y   | Y   |
 | Internet Banking | Y   | Y    | Y   | Y    | Y   | N        | N     | N   | N   |
 | Credit Card      | Y   | Y    | Y   | Y    | Y   | Y        | Y     | Y   | Y   |
